<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rules_region"
        android:text="@string/rules_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/getRulesBtn"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get" />

        <Button
            android:id="@+id/createRuleBtn"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create" />

        <Space android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/deleteRuleBtn"
            android:enabled="false"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
    </LinearLayout>
    <TextView
        android:id="@+id/rules_apicall_response"
        android:text="@string/rules_apicall_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/websocket_live_status"
        android:text="@string/websocket_live_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/fire_detector_device_name"
        android:text="@string/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/fire_detector_device_id"
        android:text="@string/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/fire_detector_device_status"
        android:text="@string/device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/fire_detector_status_update_time"
        android:text="@string/status_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/smart_light_device_name"
        android:text="@string/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/smart_light_device_id"
        android:text="@string/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/smart_light_device_status"
        android:text="@string/device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/smart_light_status_update_time"
        android:text="@string/status_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

</LinearLayout>
